# OpenGL_CMake_MSVC

./: .gitignore  CMakeLists.txt  Note.txt  README.md
include/glad/: glad.h
lib/: glfw3dll.lib
lib/cmake/glfw3/: glfw3Targets-debug.cmake  glfw3Targets.cmake
lib/pkgconfig/: glfw3.pc
shader/: 001.frag  001.vert
src/: CameraUtil.h  GLDrawble.h  MartrixUtil.h  MyRenderWindow.cpp  MyRenderWindow.h  Quad.cpp  Quad.h  Rectangle.cpp  Rectangle.h  RenderWindow.h  ShaderUtil.h  TheMain.cpp  Transform.cpp  Transform.h
src/base/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  RenderWindow.cpp  RenderWindow.h  Transform.cpp  Transform.h
src/third/: glad.c
src/util/: CameraUtil.cpp  CameraUtil.h  MartrixUtil.h  MatrixUtil.cpp  TextureUtil.cpp  TextureUtil.h
